# HW3

./: .gitignore  README.md  openspec.md  openspec.yaml  pyproject.toml  streamlit_app.py
src/spam_analytics/: __init__.py  cli.py  config.py  config.yaml  data.py  evaluation.py  modeling.py  preprocessing.py  visualization.py
src/spam_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
